# wasm-bindgen

./: CHANGELOG.md  Cargo.toml
crates/backend/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli-support/: Cargo.toml
crates/cli-support/src/js/: binding.rs
crates/cli-support/src/wit/: incoming.rs  outgoing.rs  standard.rs
crates/macro-support/: Cargo.toml
crates/msrv/lib/: Cargo.toml
src/convert/: impls.rs
tests/wasm/: optional_primitives.js
