[package]
authors = ["The wasm-bindgen Developers"]
categories = ["wasm"]
description = """
Bindings for all JS global objects and functions in all JS environments like
Node.js and browsers, built on `#[wasm_bindgen]` using the `wasm-bindgen` crate.
"""
documentation = "https://docs.rs/js-sys"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "js-sys"
readme = "./README.md"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/js-sys"
rust-version = "1.57"
version = "0.3.72"

[lib]
doctest = false
test = false

[dependencies]
wasm-bindgen = { git = "https://github.com/TylerJang27/wasm-bindgen.git", rev = "1226804f81d8738610cd85294caee99006c2bb76" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-test = "0.3.45"
web-sys = { version = "0.3.72", features = ["Headers", "Response", "ResponseInit"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(js_sys_unstable_apis)'] }
