[package]
authors = ["The wasm-bindgen Developers"]
description = "Bridging the gap between Rust Futures and JavaScript Promises"
documentation = "https://docs.rs/wasm-bindgen-futures"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-futures"
readme = "./README.md"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/futures"
rust-version = "1.57"
version = "0.4.45"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1.0.0"
futures-core = { version = '0.3.8', default-features = false, optional = true }
wasm-bindgen = { git = "https://github.com/TylerJang27/wasm-bindgen.git", rev = "1226804f81d8738610cd85294caee99006c2bb76" }
js-sys = { git = "https://github.com/TylerJang27/wasm-bindgen.git", rev = "bbd813f311474115ad0c47c94fe803ee8a35331e" }

[features]
futures-core-03-stream = ['futures-core']

[target.'cfg(target_feature = "atomics")'.dependencies.web-sys]
features = ["MessageEvent", "Worker"]
version = "0.3.72"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
futures-channel-preview = { version = "0.3.0-alpha.18" }
futures-lite = { version = "1.11.3", default-features = false }
wasm-bindgen-test = { path = '../test' }
